# SimpleCoinPlusPlus

./: .gitignore  README.md  main.cpp  makefile  test  test.cpp
simpleCoin++/SimpleWebServer/: Server.cpp  Server.hpp
simpleCoin++/miner/: baseData.hpp  miner.cpp  miner.hpp
simpleCoin++/wallet/: wallet.cpp  wallet.hpp
simple_coin/: CMakeLists.txt  README.MD
simple_coin/cmake/: StandardProjectSettings.cmake
simple_coin/src/: CMakeLists.txt  main.cpp  wallet_app.cpp
simple_coin/src/server/: CMakeLists.txt  server.cpp  server.hpp
simple_coin/src/server/miner/: miner.cpp  miner.hpp
simple_coin/src/utils/: CMakeLists.txt
simple_coin/src/utils/data/: base.hpp
simple_coin/src/utils/easy-ecc/: ecc.h
simple_coin/src/wallet/: CMakeLists.txt  wallet.cpp  wallet.hpp
src/: server_app.cpp
src/server/: CMakeLists.txt
src/utils/server-helpers/: client_http.hpp  server_http.hpp
src/wallet/: CMakeLists.txt  wallet.hpp
